--- a/src/etools/applications/partners/templates/pd/prc_review_pdf.html
+++ b/src/etools/applications/partners/templates/pd/prc_review_pdf.html
@@ -129,7 +129,7 @@
       <table class="all-cells-border">
         <tbody>
         <tr>
-          <td class="b-gray w-p20">{% translate "eTools ref no" %}</td>
+          <td class="b-navy w-p40">{% translate "eTools ref no" %}</td>
           <td>{{ pd.number }}</td>
         </tr>
         <tr>
@@ -148,14 +148,6 @@
           <td class="b-gray w-p20">{% translate "Date of submission for review" %}</td>
           <td>{{ review.created }}</td>
         </tr>
-<!--        <tr>-->
-<!--          <td class="b-gray w-p20">{% translate "PRC Member Reviewer" %}</td>-->
-<!--          <td>{{ prc_review.user.full_name }}</td>-->
-<!--        </tr>-->
-<!--        <tr>-->
-<!--          <td class="b-gray w-p20">{% translate "Review Date" %}</td>-->
-<!--          <td>{{ prc_review.review_date }}</td>-->
-<!--        </tr>-->
         <tr>
           <td class="b-gray w-p20">{% translate "Overall Approver" %}</td>
           <td>{{ review.overall_approver.full_name }}</td>
@@ -177,7 +169,9 @@
 
       <table class="all-cells-border mt-20">
         <tbody>
-
+          <tr>
+            <td class="b-navy w-p40" colspan="4">{% translate "Overall Review" %}</td>
+          </tr>
           <tr>
             <td class="b-gray" colspan="3">Q1: {% get_verbose_name review "relationship_is_represented" %}</td>
             <td colspan="1">{{ review.get_relationship_is_represented_display }}</td>
@@ -210,6 +204,48 @@
             <td class="b-gray" colspan="3">Q8: {% get_verbose_name review "supply_issues_considered" %}</td>
             <td colspan="1">{{ review.get_supply_issues_considered_display }}</td>
           </tr>
+        <tbody>
+      </table>
+
+      <table class="all-cells-border mt-20">
+        <tbody>
+          <tr>
+            <td class="b-navy w-p40" colspan="4">{% translate "PCR Member Reviews" %}</td>
+          </tr>
+          {% for prc_review in review.prc_reviews %}
+            <tr>
+              <td class="b-gray" colspan="3">Q1: {% get_verbose_name review "relationship_is_represented" %}</td>
+              <td colspan="1">{{ review.get_relationship_is_represented_display }}</td>
+            </tr>
+            <tr>
+              <td class="b-gray" colspan="3">Q2: {% get_verbose_name review "partner_comparative_advantage" %}</td>
+              <td colspan="1">{{ review.get_partner_comparative_advantage_display }}</td>
+            </tr>
+            <tr>
+              <td class="b-gray" colspan="3">Q3: {% get_verbose_name review "relationships_are_positive" %}</td>
+              <td colspan="1">{{ review.get_relationships_are_positive_display }}</td>
+            </tr>
+            <tr>
+              <td class="b-gray" colspan="3">Q4: {% get_verbose_name review "pd_is_relevant" %}</td>
+              <td colspan="1">{{ review.get_pd_is_relevant_display }}</td>
+            </tr>
+            <tr>
+              <td class="b-gray" colspan="3">Q5: {% get_verbose_name review "pd_is_guided" %}</td>
+              <td colspan="1">{{ review.get_pd_is_guided_display }}</td>
+            </tr>
+            <tr>
+              <td class="b-gray" colspan="3">Q6: {% get_verbose_name review "ges_considered" %}</td>
+              <td colspan="1">{{ review.get_ges_considered_display }}</td>
+            </tr>
+            <tr>
+              <td class="b-gray" colspan="3">Q7: {% get_verbose_name review "budget_is_aligned" %}</td>
+              <td colspan="1">{{ review.get_budget_is_aligned_display }}</td>
+            </tr>
+            <tr>
+              <td class="b-gray" colspan="3">Q8: {% get_verbose_name review "supply_issues_considered" %}</td>
+              <td colspan="1">{{ review.get_supply_issues_considered_display }}</td>
+            </tr>
+          {% endfor %}
         <tbody>
       </table>
 
