notification changes; admin improv

--- a/src/etools/applications/last_mile/templates/emails/wastage_transfer.html
+++ b/src/etools/applications/last_mile/templates/emails/wastage_transfer.html
@@ -221,7 +221,7 @@
                                  </td>
                                  <td class="wrapper" style="font-family:sans-serif;font-size:14px;vertical-align:top;
                                            box-sizing:border-box;padding:10px;">
-                                     {{ transfer.partner_organization.id }}
+                                     {{ transfer.id }}
                                  </td>
                                  <td class="wrapper" style="font-family:sans-serif;font-size:14px;vertical-align:top;
                                            box-sizing:border-box;padding:10px;">
