--- a/src/etools/applications/last_mile/templates/emails/wastage_transfer.html
+++ b/src/etools/applications/last_mile/templates/emails/wastage_transfer.html
@@ -326,7 +326,7 @@
                                      </td>
                                      <td class="wrapper" style="font-family:sans-serif;font-size:14px;vertical-align:top;
                                                box-sizing:border-box;padding:10px;color:red;font-weight:bold;">
-                                         {% if action == 'short_checkin' %}{{ transfer.get_transfer_subtype_display }}{% else %}{{ item.get_wastage_type_display }}{% endif %}
+                                         {% if action == 'wastage_checkout' %}{{ item.get_wastage_type_display }}{% else %}{{ transfer.get_transfer_subtype_display }}{% endif %}
                                      </td>
                                   </tr>
                               {% endfor %}
